--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
                 <div id="forcast">
 
                     <% for(let i=0, j=0; i<5; i++, j=j+4){ %>
-                        <div>
+                        <div class="daily-card">
                             <div>
                                 <%= weather[j] %>
                             </div>
